@@ -7,17 +7,16 @@ import org.springframework.ai.rag.postretrieval.document.DocumentPostProcessor;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
- * sorts news based on the absolute value of the `votescore`
+ * sorts news based on the absolute value of the `votescore` and selects top elements
  */
 @RequiredArgsConstructor
 public class VoteScoreDocumentRanker implements DocumentPostProcessor {
     private final int limit;
     @Override
     public List<Document> process(Query query, List<Document> documents) {
-        return documents.stream().sorted(Comparator.comparing(this::getAbsVoteScore).reversed()).limit(limit).collect(Collectors.toList());
+        return documents.stream().sorted(Comparator.comparing(this::getAbsVoteScore).reversed()).limit(limit).toList();
     }
 
     private float getAbsVoteScore(Document doc) {
